Add fixed margin to header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             font-size: 5em;
             color: #5088f8;
             text-shadow: 1px 1px black;
+            margin: 1em 0;
         }
         h3 {
             font-family: serif;
@@ -27,6 +28,7 @@
             font-size: 2.5em;
             color: #f0f8f8;
             text-shadow: 1px 1px black;
+            margin: -1.5em 0 1em 0;
         }
         canvas {
             display: block;
